--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "^6.3.1",
@@ -19,10 +20,12 @@
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.3",
+    "punycode": "^2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
